test/mutation_analysis/s0191_number_of_1_bits/hafis/ablation_o3_full/mutants/11/result.txt
./test/mutation_analysis/s0191_number_of_1_bits/hafis/ablation_o3_full/mutants/11/Solution.java:20: error: unreachable statement
        while (false) {
                      ^
1 error
